@@ -26,4 +26,4 @@ License: GPL
 LazyLoad: yes
 LazyData: yes
 Encoding: UTF-8
-RoxygenNote: 6.0.1.9000
+RoxygenNote: 6.0.1
