@@ -75,7 +75,6 @@
     <p>A table of the loss percentages used in Exposit 3 for the twelve different Koc classes</p>
     
 
-    <pre class="usage"><span class='no'>Koc_breaks</span></pre>
         
     <h2 class="hasAnchor" id="format"><a class="anchor" href="#format"></a>Format</h2>
 
