@@ -123,7 +123,7 @@ maximum time weighted average concentrations and areas under the curve.</p></td>
     </tr>
     <tr>
       <th>thresholds</th>
-      <td><p>Numeric vector of threshold concentrations in /L for
+      <td><p>Numeric vector of threshold concentrations in µg/L for
 generating event statistics.</p></td>
     </tr>
     </table>
