@@ -26,7 +26,7 @@ Usually, an instance of this class will be generated by \code{\link{read.TOXSWA_
 \item{\code{events}}{List of dataframes holding the event statistics for each threshold.}
 
 \item{\code{windows}}{Matrix of maximum time weighted average concentrations (TWAC_max)
-and areas under the curve in \u00B5g/day * h (AUC_max_h) or \u00B5g/day * d (AUC_max_d)
+and areas under the curve in µg/day * h (AUC_max_h) or µg/day * d (AUC_max_d)
 for the requested moving window sizes in days.}
 }}
 
@@ -35,7 +35,7 @@ for the requested moving window sizes in days.}
 \describe{
   \item{\code{get_events(threshold, total = FALSE)}}{
         Populate a datataframe with event information for the specified threshold value
-        in \u00B5g/L. If \code{total = TRUE}, the total concentration including the amount
+        in µg/L. If \code{total = TRUE}, the total concentration including the amount
         adsorbed to suspended matter will be used. The resulting dataframe is stored in the
         \code{events} field of the object.
         }
