@@ -1,9 +1,7 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/PEC_sw_exposit_runoff.R
-\docType{data}
 \name{perc_runoff_exposit}
 \alias{perc_runoff_exposit}
-\alias{Koc_breaks}
 \title{Runoff loss percentages as used in Exposit 3}
 \format{A data frame with percentage values for the dissolved fraction and the fraction
   bound to eroding particles, with Koc classes used as row names
@@ -17,13 +15,9 @@
 Excel 3.01 spreadsheet available from
   \url{https://www.bvl.bund.de/DE/04_Pflanzenschutzmittel/03_Antragsteller/04_Zulassungsverfahren/07_Naturhaushalt/psm_naturhaush_node.html#doc1400590bodyText3}
 }
-\usage{
-Koc_breaks
-}
 \description{
 A table of the loss percentages used in Exposit 3 for the twelve different Koc classes
 }
 \examples{
 print(perc_runoff_exposit)
 }
-\keyword{datasets}
