@@ -1,3 +1,11 @@
+commit b9ce44748f2795ae1f35fe5a510e88635f247a7f
+Author: Johannes Ranke <jranke@uni-bremen.de>
+Date:   2018-01-29 09:22:42 +0100
+
+    Correction of return value documentation for PEC_sw_exposit_runoff
+    
+    Rebuild pkgdown documentation
+
 commit 87d63e649da5e12409c50cb06d3d2a01e9880759
 Author: Johannes Ranke <jranke@uni-bremen.de>
 Date:   2017-12-15 17:25:21 +0100
